# CubeCover

./: .gitignore  .polyscope.ini  CMakeLists.txt  README.md  imgui.ini
cmake/: FindGUROBI.cmake  FindLIBIGL.cmake  FindPolyscope.cmake
meshes/: frames_curr_spot.bfra  spot_5000.mesh  tetrahedron_100.fra  tetrahedron_100.hexex  tetrahedron_100.mesh  tetrahedron_100.perm
src/: AssignmentGroup.cpp  AssignmentGroup.h  CoMISoMIPWrapper.cpp  CubeCover.cpp  CubeCover.h  CurlCorrection.cpp  CurlCorrection.h  CutToSimplyConnected.cpp  CutToSimplyConnected.h  FrameField.cpp  FrameField.h  GurobiMIPWrapper.cpp  GurobiMIPWrapper.h  Integration.cpp  Integration.h  IsolinesExtraction.cpp  IsolinesExtraction.h  MIPWrapper.h  ReadFrameField.cpp  ReadFrameField.h  ReadHexEx.cpp  ReadHexEx.h  ReadMoments.cpp  ReadMoments.h  SingularCurveNetwork.cpp  SingularCurveNetwork.h  StreamlinesExtraction.cpp  StreamlinesExtraction.h  SurfaceExtraction.cpp  SurfaceExtraction.h  TetMeshConnectivity.cpp  TetMeshConnectivity.h  WriteFrameFIeld.cpp  WriteFrameField.h  WriteHexEx.cpp  WriteHexEx.h  main.cpp  readMeshFixed.h
tools/bfra2fra/: CMakeLists.txt
tools/bfra2fra/src/: main.cpp
tools/boundarystreamlineviewer/: CMakeLists.txt
tools/boundarystreamlineviewer/src/: FrameFieldVis.cpp  FrameFieldVis.h  ReadFancyData.h  main.cpp
tools/hexextoOpenVDB/: CMakeLists.txt
tools/hexextoOpenVDB/src/: SceneInfo.cpp  SceneInfo.h  StampScalarView.cpp  VoxelUtils.cpp  VoxelUtils.h  main.cpp
tools/integergrid/: CMakeLists.txt
tools/integergrid/src/: main.cpp
tools/isolineviewer/: CMakeLists.txt
tools/isolineviewer/src/: ExtractIsolines.cpp  ExtractIsolines.h  main.cpp
tools/isolineviewer_fancy/: CMakeLists.txt  scratch_examples.txt
tools/isolineviewer_fancy/src/: ExtractIsolines.cpp  ExtractIsolines.h  TraceStreamlines.cpp  main.cpp
tools/isosurfacesviewer/: CMakeLists.txt
tools/isosurfacesviewer/src/: ExtractIsoSurfaces.cpp  ExtractIsoSurfaces.h  ExtractIsolines.cpp  ExtractIsolines.h  TraceStreamlines.cpp  TraceStreamlines.h  main.cpp
tools/mint_frontend/: CMakeLists.txt
tools/mint_frontend/src/: FrameFieldVis.cpp  FrameFieldVis.h  MintGUI.cpp  MintGUI.h  SingularCurveNetwork.cpp  main.cpp
tools/mint_frontend/test_data/: disk_3480_tets_gl3.fra  disk_3480_tets_gl3.mesh
tools/proj_to_int_frames/: CMakeLists.txt
tools/proj_to_int_frames/src/: .polyscope.ini  FrameFieldVis.cpp  main.cpp
tools/seamless/: CMakeLists.txt
tools/seamless/src/: main.cpp
tools/singularityviewer/: CMakeLists.txt
tools/singularityviewer/src/: FrameFieldVis.cpp  SingularCurveNetwork.cpp  SingularCurveNetwork.h  main.cpp
tools/singularityviewer_fancy/: CMakeLists.txt
tools/singularityviewer_fancy/src/: ReadFancyData.cpp  ReadFancyData.h  main.cpp
tools/subdivide_tets_and_fields/: call_subdivide_mesh.sh  subdivide_mesh.m  subdivide_mesh.py
tools/subdivide_tets_and_fields/io/: exportFRA.m  exportMESH.m  importFRA.m
tools/subdivide_tets_and_fields/mesh/: BarycentricStar.m  ExportMesh.m  GeometricPrimalLM.m  ProcessMesh.m  Star2.m  genDualMesh.m  levicivita.m  processXTtetra_paul.m  sharedVertsVectorized.m  tetTriToIdx_vectorized.m
tools/subdivide_tets_and_fields/subdivide/: subdivideTetFace.m
tools/volumeparamviewer/: CMakeLists.txt
tools/volumeparamviewer/src/: ExtractIsolines.cpp  ExtractIsolines.h  main.cpp
